--- a/genindex.html
+++ b/genindex.html
@@ -770,8 +770,6 @@
 </li>
       <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera">Camera (class in scripts.nqp.ui_elements.camera)</a>
 </li>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.CAMERA">CAMERA (UIElement attribute)</a>
-</li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.can_use_skill">can_use_skill() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.can_use_skill">[1]</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputIntent.CANCEL">CANCEL (InputIntent attribute)</a>
@@ -899,8 +897,6 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.HitTypeData.crit">crit (HitTypeData attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Shape.CROSS">CROSS (Shape attribute)</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.current_tiles">current_tiles() (Camera property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1075,8 +1071,6 @@
       <li><a href="engine/core/ui.html#scripts.engine.core.ui.UI.draw">draw() (UI method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.ui.UI.draw">[1]</a>
 </li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Wall.draw_shadow">draw_shadow() (Wall method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Wall.draw_shadow">[1]</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.draw_to_world_position">draw_to_world_position() (Camera method)</a>
 </li>
       <li><a href="engine/world_objects/game_map.html#scripts.engine.world_objects.game_map.GameMap.dump">dump() (GameMap method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.game_map.GameMap.dump">[1]</a>
 </li>
@@ -1290,8 +1284,6 @@
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_direction">get_direction() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_direction">[1]</a>
 </li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.get_edge_offset">get_edge_offset() (Camera method)</a>
-</li>
       <li><a href="engine/core/ui.html#scripts.engine.core.ui.UI.get_element">get_element() (UI method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.ui.UI.get_element">[1]</a>
 </li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.get_element_rect">get_element_rect() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.get_element_rect">[1]</a>
@@ -1336,6 +1328,8 @@
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_reflected_direction">get_reflected_direction() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_reflected_direction">[1]</a>
 </li>
+      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.get_render_pos">get_render_pos() (Camera method)</a>
+</li>
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.get_room">get_room() (DungeonGenerator method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.get_room">[1]</a>
 </li>
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.get_room_data">get_room_data() (DungeonGenerator method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.get_room_data">[1]</a>
@@ -1345,8 +1339,6 @@
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_secondary_stat">get_secondary_stat() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_secondary_stat">[1]</a>
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_tile">get_tile() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_tile">[1]</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.get_tile_col_row">get_tile_col_row() (Camera static method)</a>
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.get_tiles">get_tiles() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.get_tiles">[1]</a>
 </li>
@@ -1383,8 +1375,6 @@
       <li><a href="engine/widgets/screen_message.html#scripts.engine.widgets.screen_message.ScreenMessage.handle_events">handle_events() (ScreenMessage method)</a>, <a href="scripts.engine.widgets.html#scripts.engine.widgets.screen_message.ScreenMessage.handle_events">[1]</a>
 </li>
       <li><a href="engine/core/ui.html#scripts.engine.core.ui.UI.has_element">has_element() (UI method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.ui.UI.has_element">[1]</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.has_reached_target">has_reached_target() (Camera method)</a>
 </li>
       <li><a href="engine/internal/component.html#scripts.engine.internal.component.HasCombatStats">HasCombatStats (class in scripts.engine.internal.component)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.HasCombatStats">[1]</a>
 </li>
@@ -1478,10 +1468,10 @@
 </li>
       <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.InputEvent">InputEvent (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputEvent">[1]</a>
 </li>
-      <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.InputIntent">InputIntent (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputIntent">[1]</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.InputIntent">InputIntent (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.InputIntent">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.ProjectileSpeed.INSTANT">INSTANT (ProjectileSpeed attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.EventType.INTERACTION">INTERACTION (EventType attribute)</a>
@@ -1499,8 +1489,6 @@
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.is_in_border">is_in_border() (DungeonGenerator method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.is_in_border">[1]</a>
 </li>
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.is_in_bounds">is_in_bounds() (DungeonGenerator method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.is_in_bounds">[1]</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.is_in_camera_edge">is_in_camera_edge() (Camera method)</a>
 </li>
       <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.is_in_camera_view">is_in_camera_view() (Camera method)</a>
 </li>
@@ -1893,6 +1881,8 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.component.NQPComponent.on_delete">(NQPComponent method)</a>
 </li>
       </ul></li>
+      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.on_target">on_target() (Camera property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.TargetTag.OPEN_SPACE">OPEN_SPACE (TargetTag attribute)</a>
@@ -1959,11 +1949,9 @@
         <li><a href="engine/widgets/window.html#scripts.engine.widgets.window.Window.process_close_button">(Window method)</a>, <a href="scripts.engine.widgets.html#scripts.engine.widgets.window.Window.process_close_button">[1]</a>
 </li>
       </ul></li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.process_event">process_event() (Camera method)</a>
+      <li><a href="nqp/elements/character_selector.html#scripts.nqp.ui_elements.character_selector.CharacterSelector.process_event">process_event() (CharacterSelector method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.character_selector.CharacterSelector.process_event">[1]</a>
 
       <ul>
-        <li><a href="nqp/elements/character_selector.html#scripts.nqp.ui_elements.character_selector.CharacterSelector.process_event">(CharacterSelector method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.character_selector.CharacterSelector.process_event">[1]</a>
-</li>
         <li><a href="engine/widgets/panel.html#scripts.engine.widgets.panel.Panel.process_event">(Panel method)</a>, <a href="scripts.engine.widgets.html#scripts.engine.widgets.panel.Panel.process_event">[1]</a>
 </li>
         <li><a href="nqp/elements/skill_bar.html#scripts.nqp.ui_elements.skill_bar.SkillBar.process_event">(SkillBar method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.skill_bar.SkillBar.process_event">[1]</a>
@@ -2091,9 +2079,11 @@
 </li>
       <li><a href="engine/core/world.html#scripts.engine.core.world.remove_component">remove_component() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.remove_component">[1]</a>
 </li>
-      <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.LightBox.render">render() (LightBox method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.LightBox.render">[1]</a>
+      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.render">render() (Camera method)</a>
 
       <ul>
+        <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.LightBox.render">(LightBox method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.LightBox.render">[1]</a>
+</li>
         <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.Wall.render">(Wall method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.Wall.render">[1]</a>
 </li>
       </ul></li>
@@ -2101,10 +2091,10 @@
 </li>
       <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.RenderLayer">RenderLayer (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.RenderLayer">[1]</a>
 </li>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ReactionData.required_opinion">required_opinion (ReactionData attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ReactionData.required_opinion">required_opinion (ReactionData attribute)</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SecondaryStat.RESIST_ASTRAL">RESIST_ASTRAL (SecondaryStat attribute)</a>
 </li>
       <li><a href="engine/world_objects/combat_stats.html#scripts.engine.world_objects.combat_stats.CombatStats.resist_astral">resist_astral() (CombatStats property)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.combat_stats.CombatStats.resist_astral">[1]</a>
@@ -2552,6 +2542,8 @@
         <li><a href="nqp/elements/tile_info.html#module-scripts.nqp.ui_elements.tile_info">module</a>, <a href="scripts.nqp.ui_elements.html#module-scripts.nqp.ui_elements.tile_info">[1]</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     scripts.nqp.ui_elements.title_screen
 
@@ -2559,8 +2551,6 @@
         <li><a href="nqp/elements/title_screen.html#module-scripts.nqp.ui_elements.title_screen">module</a>, <a href="scripts.nqp.ui_elements.html#module-scripts.nqp.ui_elements.title_screen">[1]</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="nqp/actions/behaviour.html#scripts.nqp.actions.behaviour.SearchAndAttack">SearchAndAttack (class in scripts.nqp.actions.behaviour)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.behaviour.SearchAndAttack">[1]</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.BaseStatData.secondary">secondary (BaseStatData attribute)</a>
@@ -2638,10 +2628,6 @@
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.set_mask_alpha">set_mask_alpha() (in module scripts.engine.world_objects.lighting)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.set_mask_alpha">[1]</a>
 </li>
       <li><a href="engine/core/state.html#scripts.engine.core.state.set_new">set_new() (in module scripts.engine.core.state)</a>, <a href="scripts.engine.core.html#scripts.engine.core.state.set_new">[1]</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.set_overlay_directions">set_overlay_directions() (Camera method)</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.set_overlay_visibility">set_overlay_visibility() (Camera method)</a>
 </li>
       <li><a href="engine/core/chronicle.html#scripts.engine.core.chronicle.set_previous_turn_holder">set_previous_turn_holder() (in module scripts.engine.core.chronicle)</a>, <a href="scripts.engine.core.html#scripts.engine.core.chronicle.set_previous_turn_holder">[1]</a>
 </li>
@@ -3159,10 +3145,10 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.MapData.width">(MapData attribute)</a>
 </li>
       </ul></li>
-      <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.RoomConcept.width">width() (RoomConcept property)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.width">[1]</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.RoomConcept.width">width() (RoomConcept property)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.width">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.GameEvent.WIN_CONDITION_MET">WIN_CONDITION_MET (GameEvent attribute)</a>
 </li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.win_game">win_game() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.win_game">[1]</a>
@@ -3170,8 +3156,6 @@
       <li><a href="engine/internal/component.html#scripts.engine.internal.component.WinCondition">WinCondition (class in scripts.engine.internal.component)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.WinCondition">[1]</a>
 </li>
       <li><a href="engine/widgets/window.html#scripts.engine.widgets.window.Window">Window (class in scripts.engine.widgets.window)</a>, <a href="scripts.engine.widgets.html#scripts.engine.widgets.window.Window">[1]</a>
-</li>
-      <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.world_to_draw_position">world_to_draw_position() (Camera method)</a>
 </li>
   </ul></td>
 </tr></table>
